--- a/TodoApp/TodoApp.csproj
+++ b/TodoApp/TodoApp.csproj
@@ -72,9 +72,10 @@
     </Compile>
     <Compile Include="Model\Todo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\TodoService.cs" />
     <Compile Include="ViewModels\CategoryViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
-    <Compile Include="Model\NotifyObject.cs" />
+    <Compile Include="Common\NotifyObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
